--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script
+      src="https://kit.fontawesome.com/d8d71e7a3c.js"
+      crossorigin="anonymous"
+    ></script>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Neocoast react boilerplate</title>
-</head>
+    <title>Neocoast react boilerplate</title>
+  </head>
 
-<body>
-  <section id="mount"></section>
-</body>
-
+  <body>
+    <section id="mount"></section>
+  </body>
 </html>
